kubernetes/infrastructure/traefik/dashboard-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.syslabs.dev`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    - hosts:
        - traefik.syslabs.dev
